--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="right-links">
             <nav class="nav-links">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="program.html">Program List</a></li>
                     <li><a href="about.html">About Us</a></li>
                 </ul>
