--- a/program.html
+++ b/program.html
@@ -15,7 +15,7 @@
             <nav class="nav-links">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="program.html">Program List</a></li>
+                    <li><a href="program.html" class="active">Program List</a></li>
                     <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
